[gd_scene load_steps=24 format=3 uid="uid://b57uspbprxc8"]

[ext_resource type="Script" uid="uid://dl71w3286o4vu" path="res://scripts/world.gd" id="1_ho7yh"]
[ext_resource type="LightmapGIData" uid="uid://m80p8mvaiylg" path="res://world.lmbake" id="2_70uel"]
[ext_resource type="PackedScene" uid="uid://bd3ai1v40ssao" path="res://nodes/map.tscn" id="3_fd0sg"]
[ext_resource type="Script" uid="uid://cbg6vc7ae5bfx" path="res://scripts/ui/fps_counter.gd" id="4_2328u"]
[ext_resource type="Script" uid="uid://ciupioa0w3fwx" path="res://scripts/ui/menu/host_button.gd" id="4_nuahp"]
[ext_resource type="Shader" uid="uid://bffb4oml2tih7" path="res://scripts/shaders/blur.gdshader" id="4_p7mxg"]
[ext_resource type="AudioStream" uid="uid://p6uvqtljqic7" path="res://audio/661248__magmadiverrr__video-game-menu-music.ogg" id="4_taatn"]
[ext_resource type="Script" uid="uid://cjolnk17vxiy4" path="res://scripts/ui/menu/options/fullscreen.gd" id="5_abwkb"]
[ext_resource type="Script" uid="uid://ccmvqunxg4jt0" path="res://scripts/ui/menu/options/mouse_sensitivity.gd" id="6_00vww"]
[ext_resource type="Script" uid="uid://c3vstu8yddjbr" path="res://scripts/ui/menu/options/back.gd" id="6_2hany"]
[ext_resource type="Script" uid="uid://d3si746sdjop" path="res://scripts/ui/menu/options_button.gd" id="6_7g7sm"]
[ext_resource type="Script" uid="uid://da27p0s3rx0x5" path="res://scripts/ui/menu/pause/resume.gd" id="7_5cdyw"]
[ext_resource type="Script" uid="uid://c16niifxo0ctj" path="res://scripts/ui/menu/options/controller_sensitivity.gd" id="7_jhf7u"]
[ext_resource type="Script" uid="uid://iykso6bsiyus" path="res://scripts/ui/menu/pause/quit.gd" id="9_ucmny"]

[sub_resource type="PhysicalSkyMaterial" id="PhysicalSkyMaterial_r06yd"]
energy_multiplier = 1.25

[sub_resource type="Sky" id="Sky_78err"]
sky_material = SubResource("PhysicalSkyMaterial_r06yd")

[sub_resource type="Environment" id="Environment_v7lsv"]
background_mode = 2
sky = SubResource("Sky_78err")
tonemap_mode = 2
tonemap_white = 6.0
ssao_enabled = true
ssil_enabled = true
glow_blend_mode = 4
fog_sun_scatter = 0.17
fog_density = 0.0099
fog_aerial_perspective = 1.0

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_wntx8"]

[sub_resource type="Animation" id="Animation_ug7wi"]
resource_name = "Dolly"
length = 120.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DollyCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0.659, -0.25, 0, 0.25, 0, -14.157, -0.25, 0, 0.25, 0, 13.2434, -0.25, 0, 0.25, 0, 0.659, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 30.0667, 89.9333, 120)
}

[sub_resource type="Animation" id="Animation_ei2s0"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../DollyCamera:position:z")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(13.2434, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lekn2"]
_data = {
&"Dolly": SubResource("Animation_ug7wi"),
&"RESET": SubResource("Animation_ei2s0")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nou27"]
shader = ExtResource("4_p7mxg")
shader_parameter/blur_amount = 2.0
shader_parameter/mix_amount = 0.0
shader_parameter/color_over = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_utqnk"]

[node name="World" type="Node"]
script = ExtResource("1_ho7yh")

[node name="LightmapGI" type="LightmapGI" parent="."]
visible = false
quality = 3
supersampling = true
bounces = 4
bounce_indirect_energy = 1.3
generate_probes_subdiv = 4
light_data = ExtResource("2_70uel")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_v7lsv")
camera_attributes = SubResource("CameraAttributesPractical_wntx8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.835807, -0.47011, 0.283589, -0.375944, 0.866496, 0.328406, -0.400115, 0.167871, -0.900959, 0, 4.88489, 0)
light_temperature = 4300.0
light_energy = 5.0
light_bake_mode = 1
shadow_enabled = true
shadow_bias = 0.0
directional_shadow_split_1 = 0.04
directional_shadow_split_2 = 0.11
directional_shadow_split_3 = 0.33
directional_shadow_blend_splits = true
directional_shadow_max_distance = 99.3

[node name="FpsCounter" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("4_2328u")

[node name="map" parent="." instance=ExtResource("3_fd0sg")]

[node name="Menu" type="CanvasLayer" parent="."]

[node name="MenuMusic" type="AudioStreamPlayer" parent="Menu"]
unique_name_in_owner = true
stream = ExtResource("4_taatn")
volume_db = -20.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
root_node = NodePath("../Blur")
libraries = {
&"": SubResource("AnimationLibrary_lekn2")
}
autoplay = "Dolly"

[node name="Blur" type="ColorRect" parent="Menu"]
material = SubResource("ShaderMaterial_nou27")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DollyCamera" type="Camera3D" parent="Menu"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0.702964, 13.2434)

[node name="Options" type="PanelContainer" parent="Menu"]
unique_name_in_owner = true
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_utqnk")

[node name="MarginContainer" type="MarginContainer" parent="Menu/Options"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Options/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="OptionsLabel" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Fullscreen"
script = ExtResource("5_abwkb")

[node name="FpsCounter" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FPS counter"

[node name="Ping" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Shows connection trip time to host (in milliseconds)"
text = "View Ping"

[node name="MusicToggle" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
button_pressed = true
text = "Music"

[node name="DisableCameraToggle" type="CheckButton" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Disable 3D Render"

[node name="SensitivityLabel" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sensitivity"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse sensitivity"

[node name="MouseSensitivity" type="HSlider" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.005
script = ExtResource("6_00vww")

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controller sensitivity"

[node name="ControllerSensitivity" type="HSlider" parent="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.001
max_value = 0.1
step = 0.001
value = 0.01
script = ExtResource("7_jhf7u")

[node name="Back" type="Button" parent="Menu/Options/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back"
script = ExtResource("6_2hany")

[node name="PauseMenu" type="PanelContainer" parent="Menu"]
visible = false
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_right = 180.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/PauseMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/PauseMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="PauseLabel" type="Label" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Pause Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"
script = ExtResource("7_5cdyw")

[node name="Options" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options
"

[node name="Quit" type="Button" parent="Menu/PauseMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("9_ucmny")

[node name="MainMenu" type="PanelContainer" parent="Menu"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 391.0
grow_vertical = 2
theme = SubResource("Theme_utqnk")

[node name="MarginContainer" type="MarginContainer" parent="Menu/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/MainMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="MainMenuLabel" type="Label" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="JoinButton" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "  Join  "

[node name="HBoxContainer" type="HBoxContainer" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddressEntry" type="LineEdit" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter IP Address Here"
alignment = 1

[node name="JoinPortBox" type="SpinBox" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
min_value = 1024.0
max_value = 65535.0
value = 9999.0
rounded = true
prefix = "Port:"

[node name="NetworkBackendJoinOptionButton" type="OptionButton" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
tooltip_text = "Networking Backend
Must be the same as server"
selected = 0
item_count = 2
popup/item_0/text = "ENet"
popup/item_0/id = 1
popup/item_1/text = "WebSocket"
popup/item_1/id = 0

[node name="PlayerInfoHBoxContainer" type="HBoxContainer" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PlayerUsername" type="LineEdit" parent="Menu/MainMenu/MarginContainer/VBoxContainer/PlayerInfoHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Username Here"
alignment = 1

[node name="HSeparator" type="HSeparator" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HostButton" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Host Dedicated Server"
script = ExtResource("4_nuahp")

[node name="HBoxContainer2" type="HBoxContainer" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HostPortBox" type="SpinBox" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1024.0
max_value = 65535.0
value = 9999.0
rounded = true
prefix = "Port:"

[node name="UPnPOptionButton" type="OptionButton" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Port Forwording
For gaming on WAN you need port forwording; on on LAN you don't.
No UPnP - Recomend for LAN gaming, but for WAN you must manualy port forword.
UPnP - Easy automatic port forwording, but must be enabled on your router, and has security concerns."
selected = 0
item_count = 2
popup/item_0/text = "No UPnP"
popup/item_0/id = 1
popup/item_1/text = "UPnP"
popup/item_1/id = 0

[node name="NetworkBackendHostOptionButton" type="OptionButton" parent="Menu/MainMenu/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Networking Backend
ENet - Only works with desktop clients. (Recomended)
WebSocket - Also works with web clients. (Not recomended as it can have hig lanency"
selected = 0
item_count = 2
popup/item_0/text = "ENet"
popup/item_0/id = 0
popup/item_1/text = "WebSocket"
popup/item_1/id = 0

[node name="HSeparator2" type="HSeparator" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
toggle_mode = true
text = "Options"
script = ExtResource("6_7g7sm")

[node name="Quit" type="Button" parent="Menu/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
script = ExtResource("9_ucmny")

[node name="AdvancedToggle" type="CheckButton" parent="Menu/MainMenu"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Show Advanced Networking"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="ServerCamPivot" type="Node3D" parent="."]

[node name="ServerCam" type="Camera3D" parent="ServerCamPivot"]
transform = Transform3D(-4.37114e-08, -0.5, 0.866025, 0, 0.866025, 0.5, -1, 2.18557e-08, -3.78552e-08, 18, 5, 0)

[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/FpsCounter" to="FpsCounter" method="_on_fps_counter_toggled"]
[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/Ping" to="FpsCounter" method="_on_ping_toggled"]
[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/MusicToggle" to="." method="_on_music_toggle_toggled"]
[connection signal="toggled" from="Menu/Options/MarginContainer/VBoxContainer/DisableCameraToggle" to="." method="_on_disable_camera_toggle_toggled"]
[connection signal="value_changed" from="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer/MouseSensitivity" to="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer/MouseSensitivity" method="_on_value_changed"]
[connection signal="value_changed" from="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2/ControllerSensitivity" to="Menu/Options/MarginContainer/VBoxContainer/HBoxContainer2/ControllerSensitivity" method="_on_value_changed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="Menu/PauseMenu/MarginContainer/VBoxContainer/Options" method="_on_back_pressed"]
[connection signal="pressed" from="Menu/Options/MarginContainer/VBoxContainer/Back" to="Menu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" method="_on_back_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu/PauseMenu/MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="Menu/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="toggled" from="Menu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_toggled"]
[connection signal="toggled" from="Menu/MainMenu/MarginContainer/VBoxContainer/OptionsButton" to="Menu/Options/MarginContainer/VBoxContainer/Fullscreen" method="_on_options_button_toggled"]
[connection signal="toggled" from="Menu/MainMenu/AdvancedToggle" to="." method="_on_advanced_toggle_toggled"]

[editable path="map"]
